#341 [feat] 내부 로직 처리